# OCR_interview

./: LICENSE  OCR.py  README.md  pyproject.toml
