[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
opencv-python = "^4.2.0"
unidecode = "^1.1.1"
Pillow = "^7.0.0"
pytesseract = "^0.3.3"
regex = "^2020.2.20"
random2 = "^1.0.1"
spacy = "^2.2.3"
pdf2image = "^1.12.1"
isort = "^4.3.21"
yapf = "^0.29.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
